--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -171,6 +171,8 @@
 
         <!-- Already have account -->
         <TextView
+            android:clickable="true"
+            android:focusable="true"
             android:id="@+id/textLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
