--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#999999</color>
     <color name="orange">#F87E2B</color>
+    <color name="light_gray">#D3D3D3</color>
+    <color name="light_blue">#5dcad1</color>
 </resources>
